# aap

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  setup.py
aap/: README.md  __init__.py  api.py  api_tokens.txt  audit.py  auth.py  auth_allowlist.txt  cli.py  config.py  db.py  evaluator.py  gate.py  policy.py  state.py  storage.py  utils.py
aap/adapters/: __init__.py  git_adapter.py
aap/evidence/example/: results.json
aap/hooks/: pre-receive
aap/policies/: default.yaml
aap/tests/: test_state.py
docs/: quickstart.md  roadmap.md
